--- a/core/src/pages/Home.css
+++ b/core/src/pages/Home.css
@@ -643,8 +643,11 @@ height: 24px;
 }
 
 .why-subheading {
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
   color: #45556c !important;
-  text-align: center;
+  text-align: center !important;
   font-size: 15px !important;
   font-weight: 500 !important;
 }
@@ -716,7 +719,9 @@ height: 24px;
 
   .why-subheading {
     font-size: 1rem;
-  
+    text-align: center !important;
+    margin: 0 auto !important;
+    display: block;
   }
 
   .why-icon {
@@ -724,6 +729,5 @@ height: 24px;
   }
 }
 
-/* section 5 end */
 
 /* section 8 start */
